// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenuItemChildren when a checkmark icon renders the component with the checkmark 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Unknown
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={undefined}
    index={1}
    item={
      Object {
        "key": "123",
      }
    }
    onCheckmarkClick={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classNames": Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      },
      "hasIcons": undefined,
      "index": 1,
      "item": Object {
        "key": "123",
      },
      "onCheckmarkClick": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": <div
        class="linkContent"
      >
        <i
          aria-hidden="true"
          class=
              ms-Icon-placeHolder
              checkmarkIcon
              {
                width: 1em;
              }
          role="presentation"
        />
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CheckMarkIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={undefined}
            index={1}
            item={
              Object {
                "key": "123",
              }
            }
            onCheckmarkClick={[Function]}
          />,
          <ItemIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={undefined}
            index={1}
            item={
              Object {
                "key": "123",
              }
            }
            onCheckmarkClick={[Function]}
          />,
          <ItemName
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={undefined}
            index={1}
            item={
              Object {
                "key": "123",
              }
            }
            onCheckmarkClick={[Function]}
          />,
          <SubMenuIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={undefined}
            index={1}
            item={
              Object {
                "key": "123",
              }
            }
            onCheckmarkClick={[Function]}
          />,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": undefined,
            "index": 1,
            "item": Object {
              "key": "123",
            },
            "onCheckmarkClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "checkmarkIcon",
              "iconName": "",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": <i
                aria-hidden="true"
                class=
                    ms-Icon-placeHolder
                    checkmarkIcon
                    {
                      width: 1em;
                    }
                role="presentation"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": true,
                "aria-label": undefined,
                "className": 
                  ms-Icon-placeHolder
                  checkmarkIcon
                  {
                    width: 1em;
                  },
                "onClick": [Function],
                "role": "presentation",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "i",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": undefined,
            "index": 1,
            "item": Object {
              "key": "123",
            },
            "onCheckmarkClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": undefined,
            "index": 1,
            "item": Object {
              "key": "123",
            },
            "onCheckmarkClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": undefined,
            "index": 1,
            "item": Object {
              "key": "123",
            },
            "onCheckmarkClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classNames": Object {
          "checkmarkIcon": "checkmarkIcon",
          "divider": "---",
          "icon": "icon",
          "item": "item",
          "label": "label",
          "linkContent": "linkContent",
          "linkContentMenu": "linkContentMenu",
          "root": "root",
          "splitContainer": "splitContainer",
          "splitMenu": "splitMenu",
          "splitPrimary": "splitPrimary",
          "subMenuIcon": "subMenuIcon",
        },
        "hasIcons": undefined,
        "index": 1,
        "item": Object {
          "key": "123",
        },
        "onCheckmarkClick": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": <div
          class="linkContent"
        >
          <i
            aria-hidden="true"
            class=
                ms-Icon-placeHolder
                checkmarkIcon
                {
                  width: 1em;
                }
            role="presentation"
          />
        </div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <CheckMarkIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={undefined}
              index={1}
              item={
                Object {
                  "key": "123",
                }
              }
              onCheckmarkClick={[Function]}
            />,
            <ItemIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={undefined}
              index={1}
              item={
                Object {
                  "key": "123",
                }
              }
              onCheckmarkClick={[Function]}
            />,
            <ItemName
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={undefined}
              index={1}
              item={
                Object {
                  "key": "123",
                }
              }
              onCheckmarkClick={[Function]}
            />,
            <SubMenuIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={undefined}
              index={1}
              item={
                Object {
                  "key": "123",
                }
              }
              onCheckmarkClick={[Function]}
            />,
          ],
          "className": "linkContent",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": undefined,
              "index": 1,
              "item": Object {
                "key": "123",
              },
              "onCheckmarkClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "checkmarkIcon",
                "iconName": "",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": <i
                  aria-hidden="true"
                  class=
                      ms-Icon-placeHolder
                      checkmarkIcon
                      {
                        width: 1em;
                      }
                  role="presentation"
                />,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": true,
                  "aria-label": undefined,
                  "className": 
                    ms-Icon-placeHolder
                    checkmarkIcon
                    {
                      width: 1em;
                    },
                  "onClick": [Function],
                  "role": "presentation",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                ],
                "type": "i",
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": undefined,
              "index": 1,
              "item": Object {
                "key": "123",
              },
              "onCheckmarkClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": undefined,
              "index": 1,
              "item": Object {
                "key": "123",
              },
              "onCheckmarkClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": undefined,
              "index": 1,
              "item": Object {
                "key": "123",
              },
              "onCheckmarkClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ContextMenuItemChildren when it has a sub menu renders the menu icon 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Unknown
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={true}
    index={1}
    item={
      Object {
        "iconProps": Object {},
        "key": "123",
        "submenuIconProps": Object {},
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classNames": Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      },
      "hasIcons": true,
      "index": 1,
      "item": Object {
        "iconProps": Object {},
        "key": "123",
        "submenuIconProps": Object {},
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": <div
        class="linkContent"
      >
        <i
          aria-hidden="true"
          class=
              icon
              {
                display: inline-block;
              }
          role="presentation"
        />
        <i
          aria-hidden="true"
          class=
              subMenuIcon
              {
                display: inline-block;
              }
          data-icon-name="ChevronRight"
          role="presentation"
        />
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CheckMarkIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              }
            }
          />,
          <ItemIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              }
            }
          />,
          <ItemName
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              }
            }
          />,
          <SubMenuIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              }
            }
          />,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
              "submenuIconProps": Object {},
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
              "submenuIconProps": Object {},
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": <i
                aria-hidden="true"
                class=
                    icon
                    {
                      display: inline-block;
                    }
                role="presentation"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": true,
                "aria-label": undefined,
                "children": undefined,
                "className": 
                  icon
                  {
                    display: inline-block;
                  },
                "data-icon-name": undefined,
                "role": "presentation",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "i",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
              "submenuIconProps": Object {},
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
              "submenuIconProps": Object {},
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "subMenuIcon",
              "iconName": "ChevronRight",
            },
            "ref": null,
            "rendered": Object {
              "instance": <i
                aria-hidden="true"
                class=
                    subMenuIcon
                    {
                      display: inline-block;
                    }
                data-icon-name="ChevronRight"
                role="presentation"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": true,
                "aria-label": undefined,
                "children": undefined,
                "className": 
                  subMenuIcon
                  {
                    display: inline-block;
                  },
                "data-icon-name": "ChevronRight",
                "role": "presentation",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "i",
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classNames": Object {
          "checkmarkIcon": "checkmarkIcon",
          "divider": "---",
          "icon": "icon",
          "item": "item",
          "label": "label",
          "linkContent": "linkContent",
          "linkContentMenu": "linkContentMenu",
          "root": "root",
          "splitContainer": "splitContainer",
          "splitMenu": "splitMenu",
          "splitPrimary": "splitPrimary",
          "subMenuIcon": "subMenuIcon",
        },
        "hasIcons": true,
        "index": 1,
        "item": Object {
          "iconProps": Object {},
          "key": "123",
          "submenuIconProps": Object {},
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": <div
          class="linkContent"
        >
          <i
            aria-hidden="true"
            class=
                icon
                {
                  display: inline-block;
                }
            role="presentation"
          />
          <i
            aria-hidden="true"
            class=
                subMenuIcon
                {
                  display: inline-block;
                }
            data-icon-name="ChevronRight"
            role="presentation"
          />
        </div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <CheckMarkIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                  "submenuIconProps": Object {},
                }
              }
            />,
            <ItemIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                  "submenuIconProps": Object {},
                }
              }
            />,
            <ItemName
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                  "submenuIconProps": Object {},
                }
              }
            />,
            <SubMenuIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                  "submenuIconProps": Object {},
                }
              }
            />,
          ],
          "className": "linkContent",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": <i
                  aria-hidden="true"
                  class=
                      icon
                      {
                        display: inline-block;
                      }
                  role="presentation"
                />,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": true,
                  "aria-label": undefined,
                  "children": undefined,
                  "className": 
                    icon
                    {
                      display: inline-block;
                    },
                  "data-icon-name": undefined,
                  "role": "presentation",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                ],
                "type": "i",
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
                "submenuIconProps": Object {},
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "subMenuIcon",
                "iconName": "ChevronRight",
              },
              "ref": null,
              "rendered": Object {
                "instance": <i
                  aria-hidden="true"
                  class=
                      subMenuIcon
                      {
                        display: inline-block;
                      }
                  data-icon-name="ChevronRight"
                  role="presentation"
                />,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": true,
                  "aria-label": undefined,
                  "children": undefined,
                  "className": 
                    subMenuIcon
                    {
                      display: inline-block;
                    },
                  "data-icon-name": "ChevronRight",
                  "role": "presentation",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                ],
                "type": "i",
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ContextMenuItemChildren when it has icons when it doesnt have iconProps renders the icon with iconName 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Unknown
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={true}
    index={1}
    item={
      Object {
        "iconProps": Object {},
        "key": "123",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classNames": Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      },
      "hasIcons": true,
      "index": 1,
      "item": Object {
        "iconProps": Object {},
        "key": "123",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": <div
        class="linkContent"
      >
        <i
          aria-hidden="true"
          class=
              icon
              {
                display: inline-block;
              }
          role="presentation"
        />
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CheckMarkIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
              }
            }
          />,
          <ItemIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
              }
            }
          />,
          <ItemName
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
              }
            }
          />,
          <SubMenuIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "iconProps": Object {},
                "key": "123",
              }
            }
          />,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": <i
                aria-hidden="true"
                class=
                    icon
                    {
                      display: inline-block;
                    }
                role="presentation"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": true,
                "aria-label": undefined,
                "children": undefined,
                "className": 
                  icon
                  {
                    display: inline-block;
                  },
                "data-icon-name": undefined,
                "role": "presentation",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "i",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "iconProps": Object {},
              "key": "123",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classNames": Object {
          "checkmarkIcon": "checkmarkIcon",
          "divider": "---",
          "icon": "icon",
          "item": "item",
          "label": "label",
          "linkContent": "linkContent",
          "linkContentMenu": "linkContentMenu",
          "root": "root",
          "splitContainer": "splitContainer",
          "splitMenu": "splitMenu",
          "splitPrimary": "splitPrimary",
          "subMenuIcon": "subMenuIcon",
        },
        "hasIcons": true,
        "index": 1,
        "item": Object {
          "iconProps": Object {},
          "key": "123",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": <div
          class="linkContent"
        >
          <i
            aria-hidden="true"
            class=
                icon
                {
                  display: inline-block;
                }
            role="presentation"
          />
        </div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <CheckMarkIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                }
              }
            />,
            <ItemIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                }
              }
            />,
            <ItemName
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                }
              }
            />,
            <SubMenuIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "iconProps": Object {},
                  "key": "123",
                }
              }
            />,
          ],
          "className": "linkContent",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "icon",
              },
              "ref": null,
              "rendered": Object {
                "instance": <i
                  aria-hidden="true"
                  class=
                      icon
                      {
                        display: inline-block;
                      }
                  role="presentation"
                />,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": true,
                  "aria-label": undefined,
                  "children": undefined,
                  "className": 
                    icon
                    {
                      display: inline-block;
                    },
                  "data-icon-name": undefined,
                  "role": "presentation",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                ],
                "type": "i",
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "iconProps": Object {},
                "key": "123",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ContextMenuItemChildren when it has icons when it has iconProps renders the icon 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Unknown
    classNames={
      Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      }
    }
    hasIcons={true}
    index={1}
    item={
      Object {
        "icon": "itemIcon",
        "key": "123",
        "name": "menuItem",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classNames": Object {
        "checkmarkIcon": "checkmarkIcon",
        "divider": "---",
        "icon": "icon",
        "item": "item",
        "label": "label",
        "linkContent": "linkContent",
        "linkContentMenu": "linkContentMenu",
        "root": "root",
        "splitContainer": "splitContainer",
        "splitMenu": "splitMenu",
        "splitPrimary": "splitPrimary",
        "subMenuIcon": "subMenuIcon",
      },
      "hasIcons": true,
      "index": 1,
      "item": Object {
        "icon": "itemIcon",
        "key": "123",
        "name": "menuItem",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": <div
        class="linkContent"
      >
        <i
          aria-hidden="true"
          class=
              icon
              {
                display: inline-block;
              }
          data-icon-name="itemIcon"
          role="presentation"
        />
        <span
          class="label"
        >
          menuItem
        </span>
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CheckMarkIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              }
            }
          />,
          <ItemIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              }
            }
          />,
          <ItemName
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              }
            }
          />,
          <SubMenuIcon
            classNames={
              Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              }
            }
            hasIcons={true}
            index={1}
            item={
              Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              }
            }
          />,
        ],
        "className": "linkContent",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "icon": "itemIcon",
              "key": "123",
              "name": "menuItem",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "icon": "itemIcon",
              "key": "123",
              "name": "menuItem",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "icon",
              "iconName": "itemIcon",
            },
            "ref": null,
            "rendered": Object {
              "instance": <i
                aria-hidden="true"
                class=
                    icon
                    {
                      display: inline-block;
                    }
                data-icon-name="itemIcon"
                role="presentation"
              />,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": true,
                "aria-label": undefined,
                "children": undefined,
                "className": 
                  icon
                  {
                    display: inline-block;
                  },
                "data-icon-name": "itemIcon",
                "role": "presentation",
              },
              "ref": null,
              "rendered": Array [
                undefined,
              ],
              "type": "i",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "icon": "itemIcon",
              "key": "123",
              "name": "menuItem",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": <span
              class="label"
            >
              menuItem
            </span>,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "menuItem",
              "className": "label",
            },
            "ref": null,
            "rendered": Array [
              "menuItem",
            ],
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classNames": Object {
              "checkmarkIcon": "checkmarkIcon",
              "divider": "---",
              "icon": "icon",
              "item": "item",
              "label": "label",
              "linkContent": "linkContent",
              "linkContentMenu": "linkContentMenu",
              "root": "root",
              "splitContainer": "splitContainer",
              "splitMenu": "splitMenu",
              "splitPrimary": "splitPrimary",
              "subMenuIcon": "subMenuIcon",
            },
            "hasIcons": true,
            "index": 1,
            "item": Object {
              "icon": "itemIcon",
              "key": "123",
              "name": "menuItem",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classNames": Object {
          "checkmarkIcon": "checkmarkIcon",
          "divider": "---",
          "icon": "icon",
          "item": "item",
          "label": "label",
          "linkContent": "linkContent",
          "linkContentMenu": "linkContentMenu",
          "root": "root",
          "splitContainer": "splitContainer",
          "splitMenu": "splitMenu",
          "splitPrimary": "splitPrimary",
          "subMenuIcon": "subMenuIcon",
        },
        "hasIcons": true,
        "index": 1,
        "item": Object {
          "icon": "itemIcon",
          "key": "123",
          "name": "menuItem",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": <div
          class="linkContent"
        >
          <i
            aria-hidden="true"
            class=
                icon
                {
                  display: inline-block;
                }
            data-icon-name="itemIcon"
            role="presentation"
          />
          <span
            class="label"
          >
            menuItem
          </span>
        </div>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <CheckMarkIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "icon": "itemIcon",
                  "key": "123",
                  "name": "menuItem",
                }
              }
            />,
            <ItemIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "icon": "itemIcon",
                  "key": "123",
                  "name": "menuItem",
                }
              }
            />,
            <ItemName
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "icon": "itemIcon",
                  "key": "123",
                  "name": "menuItem",
                }
              }
            />,
            <SubMenuIcon
              classNames={
                Object {
                  "checkmarkIcon": "checkmarkIcon",
                  "divider": "---",
                  "icon": "icon",
                  "item": "item",
                  "label": "label",
                  "linkContent": "linkContent",
                  "linkContentMenu": "linkContentMenu",
                  "root": "root",
                  "splitContainer": "splitContainer",
                  "splitMenu": "splitMenu",
                  "splitPrimary": "splitPrimary",
                  "subMenuIcon": "subMenuIcon",
                }
              }
              hasIcons={true}
              index={1}
              item={
                Object {
                  "icon": "itemIcon",
                  "key": "123",
                  "name": "menuItem",
                }
              }
            />,
          ],
          "className": "linkContent",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "icon",
                "iconName": "itemIcon",
              },
              "ref": null,
              "rendered": Object {
                "instance": <i
                  aria-hidden="true"
                  class=
                      icon
                      {
                        display: inline-block;
                      }
                  data-icon-name="itemIcon"
                  role="presentation"
                />,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": true,
                  "aria-label": undefined,
                  "children": undefined,
                  "className": 
                    icon
                    {
                      display: inline-block;
                    },
                  "data-icon-name": "itemIcon",
                  "role": "presentation",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                ],
                "type": "i",
              },
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": <span
                class="label"
              >
                menuItem
              </span>,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "menuItem",
                "className": "label",
              },
              "ref": null,
              "rendered": Array [
                "menuItem",
              ],
              "type": "span",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "classNames": Object {
                "checkmarkIcon": "checkmarkIcon",
                "divider": "---",
                "icon": "icon",
                "item": "item",
                "label": "label",
                "linkContent": "linkContent",
                "linkContentMenu": "linkContentMenu",
                "root": "root",
                "splitContainer": "splitContainer",
                "splitMenu": "splitMenu",
                "splitPrimary": "splitPrimary",
                "subMenuIcon": "subMenuIcon",
              },
              "hasIcons": true,
              "index": 1,
              "item": Object {
                "icon": "itemIcon",
                "key": "123",
                "name": "menuItem",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
